--- a/css/clock.css
+++ b/css/clock.css
@@ -11,8 +11,9 @@
 .face-bottom, .face-top {
   height: 50%;
   border-radius: 10px;
-  border: 1px solid white;
+  border: 1px dotted black;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#666666), to(#666666), color-stop(0.9, black));
+  background-color: black;
   overflow: hidden; }
 
 .face-seperator {
@@ -32,7 +33,8 @@
 
 .digit-bottom {
   position: relative;
-  bottom: 100%; }
+  bottom: 100%;
+  padding: 5px 0 0 52px; }
 
 @font-face {
   font-family: 'muncieregular';
