--- a/clock.scss
+++ b/clock.scss
@@ -11,11 +11,15 @@
 
 .face-bottom, .face-top {
   height: 50%;
-  border-radius: 10px;
-  border: 1px dotted black;
+  border-radius: 7px;
+  border: 3px solid black;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#666666), to(#666666), color-stop(.9,#000000));
   background-color: black;
   overflow: hidden;
+}
+
+.face-top {
+  margin-bottom: 1px;
 }
 
 .face-seperator {
