--- a/css/clock.css
+++ b/css/clock.css
@@ -10,11 +10,14 @@
 
 .face-bottom, .face-top {
   height: 50%;
-  border-radius: 10px;
-  border: 1px dotted black;
+  border-radius: 7px;
+  border: 3px solid black;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#666666), to(#666666), color-stop(0.9, black));
   background-color: black;
   overflow: hidden; }
+
+.face-top {
+  margin-bottom: 1px; }
 
 .face-seperator {
   display: inline-block;
